# Unified-Agents-SDK

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
api/: http.py
context/: gemini_md.py  gemini_skills.py
core/: types.py
postman/: unified-agents-sdk.postman_collection.json
providers/: _shared.py  anthropic.py  deepseek.py  gemini.py  groq.py  mistral.py  openai_compatible.py  openai_responses.py  xai.py
runtime/: bootstrap.py  windsurf_mcp_bridge.py
tests/: test_anthropic_provider.py  test_gemini_provider.py  test_mistral_provider.py  test_openai_responses_provider.py  test_xai_provider.py
tools/: mcp_config_loader.py
