[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-agents-sdk"
version = "0.3.0"
description = "Product-agnostic agent SDK with normalized provider adapters"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Philip D'Souza" },
]
requires-python = ">=3.10"
keywords = ["llm", "agent", "gateway", "openai", "anthropic", "gemini", "groq", "deepseek", "mistral", "xai", "grok", "mcp", "fastapi", "sse", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # Provider SDKs — tested against the versions listed below.
    # Upper bounds prevent silent breakage from future major-version APIs.
    "openai>=2.0,<3",           # 2.30.0 — OpenAI + Responses API (requires >=2)
    "anthropic>=0.86,<1",       # 0.86.0 — Claude / Anthropic SDK
    "google-genai>=1.47,<2",    # 1.47.0 — Gemini via google-genai (not google-generativeai)
    "groq>=1.0,<2",             # 1.0.0  — Groq (v1 is a breaking re-release)
    "mistralai>=1.10,<2",       # 1.10.0 — Mistral SDK v1 (chat + agents API)
    "mcp>=1.26,<2",             # 1.26.0 — MCP client (streamable_http / sse)
    # Web framework + transport
    "fastapi>=0.115,<1",        # 0.135.2 latest stable
    "uvicorn[standard]>=0.30,<1",  # 0.42.0 latest stable
    "httpx>=0.27,<1",           # 0.28.1 latest stable
    # Config / types / utilities
    "pydantic>=2.0,<3",         # 2.12.5 latest stable
    "pydantic-settings>=2.0,<3",  # 2.13.1 latest stable
    "anyio>=4.0,<5",            # 4.13.0 latest stable
    "typer>=0.12,<1",           # 0.24.1 latest stable
    "rich>=13.0,<15",           # 14.3.3 latest stable
]

[project.scripts]
uag = "cli:app"

[project.urls]
Homepage = "https://github.com/PhilipAD/Unified-Agents-SDK"
Repository = "https://github.com/PhilipAD/Unified-Agents-SDK"
Documentation = "https://github.com/PhilipAD/Unified-Agents-SDK#readme"
Changelog = "https://github.com/PhilipAD/Unified-Agents-SDK/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "coverage>=7.0,<8",
    "ruff==0.15.11",
    "pre-commit>=3.0,<4",
]
claude-agent = ["claude-agent-sdk>=0.1.50,<1"]
codex = []
copilot = ["github-copilot-sdk>=0.1,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live API keys (deselect with -m 'not integration')",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "providers", "tools", "context", "runtime", "api", "config"]

[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"
"py.typed" = "py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
